listagem das notas do usuário logado

--- a/app/views/notes/index.html.erb
+++ b/app/views/notes/index.html.erb
@@ -1,4 +1,4 @@
-<h1><span class="badge bg-secondary">Notas</span></h1>
+  <head>
 
     <!-- Bootstrap -->
     <!-- <link href="css/bootstrap.min.css" rel="stylesheet"> -->
@@ -11,7 +11,7 @@
     <![endif]-->
   </head>
   <body>
-    <h1>Notas</h1>
+    <h1>Bloco de notas</h1>
     <%= link_to "Nova nota", new_note_path %>
     <br>
     <br>
@@ -34,7 +34,7 @@
         <% end %>
       </tbody>
     </div>
-   <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script> -->
+    <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script> -->
     <!-- Include all compiled plugins (below), or include individual files as needed -->
     <!--<script src="js/bootstrap.min.js"></script> -->
   </body>
